// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`android::getProjectConfig returns an object with android project configuration for flat structure 1`] = `
Object {
  "appName": "",
  "applicationId": "com.some.example",
  "assets": Array [],
  "dependencyConfiguration": undefined,
  "mainActivity": ".MainActivity",
  "packageName": "com.some.example",
  "sourceDir": "/flat/android",
  "watchModeCommandParams": undefined,
}
`;

exports[`android::getProjectConfig returns an object with android project configuration for multiple 1`] = `
Object {
  "appName": "",
  "applicationId": "com.some.example",
  "assets": Array [],
  "dependencyConfiguration": undefined,
  "mainActivity": ".MainActivity",
  "packageName": "com.some.example",
  "sourceDir": "/multiple/android",
  "watchModeCommandParams": undefined,
}
`;

exports[`android::getProjectConfig returns an object with android project configuration for nested structure 1`] = `
Object {
  "appName": "app",
  "applicationId": "com.example",
  "assets": Array [],
  "dependencyConfiguration": undefined,
  "mainActivity": ".MainActivity",
  "packageName": "com.some.example",
  "sourceDir": "/nested/android",
  "watchModeCommandParams": undefined,
}
`;
